--- a/styles/style.css
+++ b/styles/style.css
@@ -8,15 +8,19 @@ body{
 }
 main{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .container{
     background-color: #fff;
     width: 870px;
     padding: 30px;
+    margin-top: 21px;
+    border-radius: 5px;
 }
 hr{
     border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
 }
 /* top player style */
 .top-players{
@@ -42,4 +46,68 @@ hr{
 .player-name{
     margin-left: 16px;
     font-size: 18px;
+}
+
+/* top blog styles */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+}
+.blog{
+    display: flex;    
+}
+.blog .thumbnail img{
+    Width: 177px;
+    Height: 117px;
+}
+.blog-info{
+    margin-left: 16px;
+}
+.blog-title{
+    font-size: 20px;
+}
+.blog-author{
+    color: #9F9F9F;
+    font-size: 16px;
+}
+.blog-author a{
+    text-decoration: none;
+    font-size: 16px;
+    color: #562EFF;
+}
+
+/* courses style */
+.course .course-banner img{
+    width: 224px;
+    height: 104px;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.filled{
+    color: #FFC014;
+}
+.fa-star.empty{
+    color: #AEAEAE;
+}
+.course-author{
+    color: #ED6B4F;
+    font-size: 14.6px;
+}
+.course-info .rating{
+    color: #A2A2A2;
+    font-size: 14.6px;
+}
+.course-duration{
+    background: #FFE4E8;
+    padding: 1px 5px;
+    border-radius: 14.6px;
+    color: #FF4A60;
+    font-size: 14.6px;
 }
