--- a/styles/style.css
+++ b/styles/style.css
@@ -78,9 +78,18 @@ hr{
 }
 
 /* courses style */
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+}
 .course .course-banner img{
     width: 224px;
     height: 104px;
+}
+.course-title{
+    color: #1E1E1E;
+    font-size: 20px;
 }
 .course-info{
     display: flex;
@@ -110,4 +119,32 @@ hr{
     border-radius: 14.6px;
     color: #FF4A60;
     font-size: 14.6px;
+}
+
+/*----------------------------
+        Media Queries 
+------------------------------*/
+
+/* Mobile Devices */
+@media only screen and (max-width: 688px) {
+    .container{
+        width: 100%;
+    }
+    .players, .blogs, .courses{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player, .blog{
+        flex-direction: column;
+    }
+}
+@media screen and (min-width: 689px) and (max-width: 991px) {
+    .container{
+        width: 100%;
+    }
+    .players, .courses{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .blogs{
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
